--- a/index.html
+++ b/index.html
@@ -20,22 +20,7 @@ var _hmt = _hmt || [];
 })();
 </script>
 <style>
-	body{
-		background-image: url(img/me.jpg);
-		/* 背景图垂直、水平均居中 */
-		background-position: center center;
-		/* 背景图不平铺 */
-		background-repeat: no-repeat;
-		/* 当内容高度大于图片高度时，背景图像的位置相对于viewport固定 */
-		background-attachment: fixed;
-		/* 让背景图基于容器大小伸缩 */
-		background-size: cover;
-		/* 设置背景颜色，背景图加载过程中会显示背景色 */
-		background-color: #464646;
-		
-		text-align: center;
-		
-	}
+	
 	
 	.parent{
 		position: fixed;
@@ -59,12 +44,59 @@ var _hmt = _hmt || [];
 
 </head>
 <body>
-	<div class="parent">
-        <div class="show">
-            <button type="button"  class="layui-btn layui-btn-radius" onclick="textLayui()">来都来了,不对我说点什么?</button>
-        </div>
-    </div>
-	
+	<div class="container"> 
+ <div class="row"> 
+ <div class="col-xs-4 col-md-4"> 
+ <a href="https://kross21.github.io" class="thumbnail"> 
+ <img src="img/1.jpg" alt="..."> 
+ </a> 
+ </div> 
+ <div class="col-xs-4 col-md-4"> 
+ <a href="https://kross21.github.io" class="thumbnail"> 
+ <img src="img/2.jpg" alt="..."> 
+ </a> 
+ </div> 
+ <div class="col-xs-4 col-md-4"> 
+ <a href="https://kross21.github.io" class="thumbnail"> 
+ <img src="img/3.jpg" alt="..."> 
+ </a> 
+ </div> 
+ </div> 
+ <div class="row"> 
+ <div class="col-xs-4 col-md-4"> 
+ <a href="https://kross21.github.io" class="thumbnail"> 
+ <img src="img/4.jpg" alt="..."> 
+ </a> 
+ </div> 
+ <div class="col-xs-4 col-md-4"> 
+ <a href="https://kross21.github.io" class="thumbnail"> 
+ <img src="img/12.jpg" alt="..."> 
+ </a> 
+ </div> 
+ <div class="col-xs-4 col-md-4"> 
+ <a href="https://kross21.github.io" class="thumbnail"> 
+ <img src="img/6.jpg" alt="..."> 
+ </a> 
+ </div> 
+ </div> 
+ <div class="row"> 
+ <div class="col-xs-4 col-md-4"> 
+ <a href="https://kross21.github.io" class="thumbnail"> 
+ <img src="img/7.jpg" alt="..."> 
+ </a> 
+ </div> 
+ <div class="col-xs-4 col-md-4"> 
+ <a href="https://kross21.github.io" class="thumbnail"> 
+ <img src="img/8.jpg" alt="..."> 
+ </a> 
+ </div> 
+ <div class="col-xs-4 col-md-4"> 
+ <a href="https://kross21.github.io" class="thumbnail"> 
+ <img src="img/9.jpg" alt="..."> 
+ </a> 
+ </div> 
+ </div> 
+ </div> 
 	
 	
 </body>
