--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@ var _hmt = _hmt || [];
   var s = document.getElementsByTagName("script")[0]; 
   s.parentNode.insertBefore(hm, s);
 })();
+	console.log("小石头");
 </script>
 <style>
 	
