--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html>
 <head>
 	<title>colourfol</title>
@@ -71,7 +71,7 @@ var _hmt = _hmt || [];
  </div> 
  <div class="col-xs-4 col-md-4"> 
  <a href="https://kross21.github.io" class="thumbnail"> 
- <img src="img/13.jpg" alt="..."> 
+ <img src="img/14.jpg" alt="..."> 
  </a> 
  </div> 
  <div class="col-xs-4 col-md-4"> 
