--- a/index.html
+++ b/index.html
@@ -1,104 +1,102 @@
-﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html>
-<head>
-	<title>colourfol</title>
-	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-	<meta name="keywords" content="小石头" />
-	<meta name="description" content="石头大爷" />
-	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-	<link href="css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
-	<link href="css/ohmygod.css" rel="stylesheet" type="text/css"/>
-	<link rel="stylesheet" href="layui/css/layui.css">
-	<script type="text/javascript" src="jquery/jquery-3.2.1.min.js" ></script>
-<script>
-var _hmt = _hmt || [];
-(function() {
-  var hm = document.createElement("script");
-  hm.src = "//hm.baidu.com/hm.js?e9e0ed8d2dd56059cc040dc1f05b7424";
-  var s = document.getElementsByTagName("script")[0]; 
-  s.parentNode.insertBefore(hm, s);
-})();
-	console.log("小石头");
-</script>
-<style>
-	
-	
-	.parent{
-		position: fixed;
-		top: 90%;
-		bottom: 10%;
-		left: 50%;
-		right: 50%;
-		
-	}
-	.show{
-		height: 50px;
-		width: 22rem;
-		/* 以下两个属性必须为width,height值的负一半 */
-		margin-left: -11rem;
-		margin-top: -25px;
-	}
-            
-	
-</style>
+	<head>
+		<title>colourfol</title>
+		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+		<meta name="keywords" content="小石头" />
+		<meta name="description" content="石头大爷" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+		<link href="css/bootstrap.min.css" rel="stylesheet" type="text/css" />
+		<link href="css/ohmygod.css" rel="stylesheet" type="text/css" />
+		<link rel="stylesheet" href="layui/css/layui.css">
+		<script type="text/javascript" src="jquery/jquery-3.2.1.min.js"></script>
+		<script>
+			var _hmt = _hmt || [];
+			(function() {
+				var hm = document.createElement("script");
+				hm.src = "//hm.baidu.com/hm.js?e9e0ed8d2dd56059cc040dc1f05b7424";
+				var s = document.getElementsByTagName("script")[0];
+				s.parentNode.insertBefore(hm, s);
+			})();
+			// console.log("小石头");
+		</script>
+		<style>
+			.parent {
+				position: fixed;
+				top: 90%;
+				bottom: 10%;
+				left: 50%;
+				right: 50%;
+
+			}
+
+			.show {
+				height: 50px;
+				width: 22rem;
+				/* 以下两个属性必须为width,height值的负一半 */
+				margin-left: -11rem;
+				margin-top: -25px;
+			}
+		</style>
 
 
-</head>
-<body>
-	<div class="container"> 
- <div class="row"> 
- <div class="col-xs-4 col-md-4"> 
- <a href="https://kross21.github.io" class="thumbnail"> 
- <img src="img/1.jpg" alt="..."> 
- </a> 
- </div> 
- <div class="col-xs-4 col-md-4"> 
- <a href="https://kross21.github.io" class="thumbnail"> 
- <img src="img/2.jpg" alt="..."> 
- </a> 
- </div> 
- <div class="col-xs-4 col-md-4"> 
- <a href="https://kross21.github.io" class="thumbnail"> 
- <img src="img/3.jpg" alt="..."> 
- </a> 
- </div> 
- </div> 
- <div class="row"> 
- <div class="col-xs-4 col-md-4"> 
- <a href="https://kross21.github.io" class="thumbnail"> 
- <img src="img/4.jpg" alt="..."> 
- </a> 
- </div> 
- <div class="col-xs-4 col-md-4"> 
- <a href="https://kross21.github.io" class="thumbnail"> 
- <img src="img/14.jpg" alt="..."> 
- </a> 
- </div> 
- <div class="col-xs-4 col-md-4"> 
- <a href="https://kross21.github.io" class="thumbnail"> 
- <img src="img/6.jpg" alt="..."> 
- </a> 
- </div> 
- </div> 
- <div class="row"> 
- <div class="col-xs-4 col-md-4"> 
- <a href="https://kross21.github.io" class="thumbnail"> 
- <img src="img/7.jpg" alt="..."> 
- </a> 
- </div> 
- <div class="col-xs-4 col-md-4"> 
- <a href="https://kross21.github.io" class="thumbnail"> 
- <img src="img/8.jpg" alt="..."> 
- </a> 
- </div> 
- <div class="col-xs-4 col-md-4"> 
- <a href="https://kross21.github.io" class="thumbnail"> 
- <img src="img/9.jpg" alt="..."> 
- </a> 
- </div> 
- </div> 
- </div> 
-	
-	
-</body>
+	</head>
+	<body>
+		<div class="container">
+			<div class="row">
+				<div class="col-xs-4 col-md-4">
+					<a href="https://kross21.github.io" class="thumbnail">
+						<img src="img/1.jpg" alt="...">
+					</a>
+				</div>
+				<div class="col-xs-4 col-md-4">
+					<a href="https://kross21.github.io" class="thumbnail">
+						<img src="img/2.jpg" alt="...">
+					</a>
+				</div>
+				<div class="col-xs-4 col-md-4">
+					<a href="https://kross21.github.io" class="thumbnail">
+						<img src="img/3.jpg" alt="...">
+					</a>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-xs-4 col-md-4">
+					<a href="https://kross21.github.io" class="thumbnail">
+						<img src="img/4.jpg" alt="...">
+					</a>
+				</div>
+				<div class="col-xs-4 col-md-4">
+					<a href="https://kross21.github.io" class="thumbnail">
+						<!-- 中心图片  替换src中路径 -->
+						<img src="img/010.jpg" alt="..." style="height: 166.9px;">
+					</a>
+				</div>
+				<div class="col-xs-4 col-md-4">
+					<a href="https://kross21.github.io" class="thumbnail">
+						<img src="img/6.jpg" alt="...">
+					</a>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-xs-4 col-md-4">
+					<a href="https://kross21.github.io" class="thumbnail">
+						<img src="img/7.jpg" alt="...">
+					</a>
+				</div>
+				<div class="col-xs-4 col-md-4">
+					<a href="https://kross21.github.io" class="thumbnail">
+						<img src="img/8.jpg" alt="...">
+					</a>
+				</div>
+				<div class="col-xs-4 col-md-4">
+					<a href="https://kross21.github.io" class="thumbnail">
+						<img src="img/9.jpg" alt="...">
+					</a>
+				</div>
+			</div>
+		</div>
+
+	<audio src="music/bgm1.mp3" autoplay="autoplay"></audio>
+	</body>
 </html>
